# llmsh

./: .gitignore  LICENSE  README.md  config.example.toml  human.md  pyproject.toml
src/llmsh/: app.py  budget.py  cli.py  clipboard.py  compaction.py  config.py  constants.py  doctor.py  endpoints.py  errors.py  markdown.py  models.py  paths.py  profiles.py  summarize.py
src/llmsh/commands/: ask.py  chat.py  doctor.py  endpoint.py  profile.py  session.py  summarize.py
src/llmsh/providers/: base.py  openai_compatible.py
src/llmsh/sessions/: store.py
src/llmsh/ui/: flow.py  main.py  screens.py  slash.py  theme.tcss  widgets.py
src/llmsh/ui/flows/: command_confirm.py  endpoint.py  profile.py  setup.py
tests/: conftest.py  test_app.py  test_ask.py  test_auto_doctor.py  test_budget.py  test_budget_display.py  test_budget_estimation.py  test_budget_integration.py  test_budget_preflight.py  test_cancel_input.py  test_capability_footer.py  test_chat_command.py  test_cli_entrypoint.py  test_clipboard.py  test_command_detection.py  test_compaction.py  test_compaction_summary.py  test_config.py  test_constants.py  test_doctor.py  test_doctor_capabilities.py  test_doctor_command.py  test_endpoint_command.py  test_endpoints.py  test_error_recovery.py  test_errors.py  test_flow.py  test_markdown.py  test_models.py  test_onboarding_flow.py  test_paths.py  test_profile_command.py  test_profiles.py  test_provider_base.py  test_provider_openai.py  test_provider_reasoning.py  test_provider_tools.py  test_reasoning_style.py  test_retry.py  test_session_command.py  (+11 more)
