[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmsh"
version = "0.1.0"
description = "A terminal CLI for LLMs"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Hosam Kamel" }]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer",
    "textual",
    "httpx",
    "pydantic",
    "platformdirs",
    "tomli-w",
    "markdown-it-py",
    "pyperclip",
]

[project.urls]
Homepage = "https://github.com/hkml/llmsh"
Repository = "https://github.com/hkml/llmsh"
Issues = "https://github.com/hkml/llmsh/issues"

[project.scripts]
llmsh = "llmsh.cli:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "ty",
    "respx",
    "semgrep",
    "lizard",
    "pyright",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llmsh"]

[tool.ruff]
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
